--- a/package.json
+++ b/package.json
@@ -7,17 +7,28 @@
     "type": "git",
     "url": "http://github.com/indexzero/winston-couchdb"
   },
-  "keywords": ["logging", "sysadmin", "tools", "winston", "couchdb"],
+  "keywords": [
+    "logging",
+    "sysadmin",
+    "tools",
+    "winston",
+    "couchdb"
+  ],
   "license": "MIT",
   "dependencies": {
     "cradle": "0.6.x",
-    "cycle": "1.0.x"
+    "cycle": "1.0.x",
+    "nano": "^8.2.2"
   },
   "devDependencies": {
     "winston": "0.6.x",
     "vows": "0.6.x"
   },
   "main": "./lib/winston-couchdb",
-  "scripts": { "test": "vows test/*-test.js --spec" },
-  "engines": { "node": ">= 0.8.0" }
+  "scripts": {
+    "test": "vows test/*-test.js --spec"
+  },
+  "engines": {
+    "node": ">= 0.8.0"
+  }
 }
