--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "nano": "^8.2.2"
   },
   "devDependencies": {
-    "winston": "0.6.x",
-    "vows": "0.6.x"
+    "vows": "^0.8.3",
+    "winston": "0.6.x"
   },
   "main": "./lib/winston-couchdb",
   "scripts": {
