--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "vows": "^0.8.3",
-    "winston": "0.6.x"
+    "winston": "^3.3.3"
   },
   "main": "./lib/winston-couchdb",
   "scripts": {
