--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "cycle": "1.0.x",
-    "nano": "^8.2.2"
+    "nano": "^8.2.2",
+    "winston-transport": "^4.4.0"
   },
   "devDependencies": {
     "vows": "^0.8.3",
